--- a/componnents.html
+++ b/componnents.html
@@ -562,13 +562,13 @@
 </div><!-- end of container-->
 </section>
 
-<!--section with -->
+<!--section with card and different bg -->
 <div class="container">
   <div class="row py-5">
     <div class="col-md-6">
       <div class="card bg-dark shadow-sm text-light"  style="width: 18rem;">
-        <img class="card-img-top p-1 rounded-4" src="https://images.unsplash.com/photo-1622495891893-0eb5818ddc6e?ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1351&q=80" alt="Top Image">
-        <div class="card-body py-3">
+        <img class="card-img-top p-3 rounded" src="https://images.unsplash.com/photo-1622495891893-0eb5818ddc6e?ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1351&q=80" alt="Top Image">
+        <div class="card-body p-3">
           <h3 class="card-title">Hello Good</h3>
             <p class="card-text">a litlle reminder of how you can make a better padding with bs5</p>
         </div>
