--- a/componnents.html
+++ b/componnents.html
@@ -563,21 +563,25 @@
 </section>
 
 <!--section with card and different bg -->
-<div class="container">
-  <div class="row py-5">
-    <div class="col-md-6">
-      <div class="card bg-dark shadow-sm text-light"  style="width: 18rem;">
+<div class="container py-5">
+  <div class="row">
+    <div class="col-md-3">
+      <div class="card bg-dark shadow-sm text-light"  >
         <img class="card-img-top p-3 rounded" src="https://images.unsplash.com/photo-1622495891893-0eb5818ddc6e?ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1351&q=80" alt="Top Image">
         <div class="card-body p-3">
           <h3 class="card-title">Hello Good</h3>
             <p class="card-text">a litlle reminder of how you can make a better padding with bs5</p>
+            <a class="btn btn-outline-light">Try It For Free</a>
         </div>
       </div>
     </div>
-    <div class="col-md-6">
-      <div class="card">
+    <div class="col-md-3">
+      <div class="card text-end">
         <div class="card-body">
-          This is some text within a card body.
+          <h5 class="card-title">Special title treatment</h5>
+          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          <img class="card-img-bottom" alt="Some Picture Name" src="https://images.unsplash.com/photo-1622495891893-0eb5818ddc6e?ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1351&q=80">
+          <a href="#" class="btn btn-dark">Go somewhere</a>
         </div>
       </div>
     </div>
