--- a/componnents.html
+++ b/componnents.html
@@ -567,8 +567,8 @@
   <div class="row">
     <div class="col-md-3">
       <div class="card bg-dark shadow-sm text-light"  >
-        <img class="card-img-top p-3 rounded" src="https://images.unsplash.com/photo-1622495891893-0eb5818ddc6e?ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1351&q=80" alt="Top Image">
-        <div class="card-body p-3">
+        <img class="card-img-top" src="https://images.unsplash.com/photo-1622495891893-0eb5818ddc6e?ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1351&q=80" alt="Top Image">
+        <div class="card-body">
           <h3 class="card-title">Hello Good</h3>
             <p class="card-text">a litlle reminder of how you can make a better padding with bs5</p>
             <a class="btn btn-outline-light">Try It For Free</a>
@@ -576,12 +576,12 @@
       </div>
     </div>
     <div class="col-md-3">
-      <div class="card text-end">
+      <div class="card text-center">
         <div class="card-body">
           <h5 class="card-title">Special title treatment</h5>
           <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <img class="card-img-bottom" alt="Some Picture Name" src="https://images.unsplash.com/photo-1622495891893-0eb5818ddc6e?ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1351&q=80">
           <a href="#" class="btn btn-dark">Go somewhere</a>
+          <img class="card-img-bottom" alt="Some Picture Name" src="https://images.unsplash.com/photo-1622495891893-0eb5818ddc6e?ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1351&q=80">
         </div>
       </div>
     </div>
